--- a/react-module/src/App.css
+++ b/react-module/src/App.css
@@ -1,38 +1,135 @@
-.App {
-  text-align: center;
+html, body, .app {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin-top: 60px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dark-theme {
+  background-color: #2f2f2f !important;
+  color: white !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.theme-toggle {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 9999;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.toggle-icon {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 9999;
+}
+
+.home-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 160px;
+  height: 120px;
+  background-color: #2f2f2f;
+  border: 2px solid #3e3e3e;
+  border-radius: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 8px;
+  transition: all 0.3s ease;
+}
+
+.home-button:hover {
+  background-color: #3e3e3e;
+  transform: scale(1.1);
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calculator-box {
   display: flex;
   flex-direction: column;
+  width: 400px;
+  height: 500px;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.result-box {
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
+  width: 400px;
+  height: 50px;
+  background-color: #353535;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.result {
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.buttons-box {
+  padding: 10px;
+}
+
+.button-row {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  background-color: #2f2f2f;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 8px;
+  transition: all 0.3s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.darker {
+  background-color: #2c2c2c;
+}
+
+.success {
+  background-color: #783232;
+  color: black;
+}
+
+.button:hover {
+  background-color: #d9d9d9;
+  font-size: 20px;
+  font-weight: bold;
+  transform: scale(1.1);
 }
